* Replace Threads where Thread.start() was not called with Runnable to avoid leaks. (CC-895) Patch by Fabio Zadrozny

build loop
======================

BuildOutputLoggerManager
----------------------
* Use different loggers for different files.

DarcsBootstrapper
----------------------
* New Darcs bootstrapper (CC-905). Patch by Florian Gilcher.

CMSynergy
----------------------
* Fix error publishing CMSynergy build (CC-876). Reported by Gerard Roos. Tested by David Corley.
* Allow specification of build and state attributes for baselines created with Synergy 6.4+ (CC-860). Patch by David Corley
* Log now captures CR Synopsis text when <cmsynergy> is used (CC-903). Patch by David Corley

Origo Publisher
----------------------
* Update to use new issue handling API. Patch by Patrick Ruckstuhl.

Rake Builder
----------------------
* Make the Ruby executable and the Rake executable configurable (CC-904). Patch by Florian Gilcher.

Removed deprecated classes
----------------------
* removed CruiseControl (old launch wrapper)
* removed net.sourceforge.cruisecontrol.SelfConfiguringPlugin 
* removed net.sourceforge.cruisecontrol.bootstrappers.CurrentBuildStatusBootstrapper
* removed net.sourceforge.cruisecontrol.bootstrappers.CurrentBuildStatusFTPBootstrapper
* removed net.sourceforge.cruisecontrol.publishers.CurrentBuildStatusPublisher
* removed net.sourceforge.cruisecontrol.publishers.CurrentBuildStatusFTPPublisher

Removed deprecated methods
----------------------
* Main, P4Bootstrapper, Log, ModificationSet 

TwitterPublisher
----------------------
* Add a new plugin for publishing build results to Twitter.

UCM
----------------------
* UCM.java not creating the right command line for describing all activities (CC-886). Reported by Adrien Gracia


documentation
======================

configxml.html
----------------------
* PropertyFileLabelIncrementer: document preBuildIncrementer attribute (CC-900). Patch by David Corley