@@ -21,6 +21,10 @@ DarcsBootstrapper
 ----------------------
 * New Darcs bootstrapper (CC-905). Patch by Florian Gilcher.
 
+DateUtil
+----------------------
+* Make DateUtil thread safe (CC-906). Patch by Sebastian Koppehel
+
 CMSynergy
 ----------------------
 * Fix error publishing CMSynergy build (CC-876). Reported by Gerard Roos. Tested by David Corley.
@@ -64,6 +68,7 @@ configxml.html
 ----------------------
 * PropertyFileLabelIncrementer: document preBuildIncrementer attribute (CC-900). Patch by David Corley
 * Fix doc error attribute "localworkingdir" for <Mercurial> build trigger when it should be "localworkingcopy" (CC-893). Reported by Joona Petrell
+
 
 CruiseControl Release Notes - 2.8.2
 
